Make sure that the toolbar does not overlap the content of its element. This is especially critical for small elements like one line text. See magento/magento2-page-builder#494

--- a/view/adminhtml/web/css/source/_module.less
+++ b/view/adminhtml/web/css/source/_module.less
@@ -29,3 +29,12 @@
         height: auto;
     }
 }
+
+// Move element options a bit higher so it doesn't overlap the content.
+// Critical for "text" element.
+.pagebuilder-options {
+    transform: translate(0, -90%);
+}
+.pagebuilder-options.pagebuilder-options-middle {
+    transform: translate(50%, -90%);
+}
